fixed projects on mobile, updated home and resume

--- a/src/style.scss
+++ b/src/style.scss
@@ -296,8 +296,8 @@ body {
 	color: $color_5;
 }
 #home-img {
-	width: 300px !important;
-	height: 300px !important;
+	width: 270px !important;
+	height: 270px !important;
 	border: 2px solid #cd5ff8;
 	box-shadow: 0 0 0 4px #181a27;
 	position: absolute !important;
@@ -307,6 +307,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 .home-about-section {
@@ -337,8 +338,6 @@ body {
 .project-card {
 	padding-top: 40px !important;
 	padding-bottom: 40px !important;
-	padding-left: 25px !important;
-	padding-right: 25px !important;
 	height: auto !important;
   width: 26% !important;
 }
@@ -354,6 +353,10 @@ body {
 		overflow: hidden !important;
 		box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
 	}
+}
+
+.proj-button {
+  width: 125px !important;
 }
 .card-img-top {
 	width: 100%;
@@ -374,7 +377,7 @@ body {
   color: $color_3 !important;
 	font-size: 2.3em !important;
 	font-weight: 500 !important;
-	padding-top: 40px !important;
+	padding-top: 30px !important;
 }
 
 .tech-icons {
@@ -468,11 +471,18 @@ body {
 	}
   
   .project-card {
-    width: 26% !important;
+    width: 100% !important;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+  }
+
+  .card-img-top {
+    width: 100% !important;
+    height: 100% !important;
   }
 
   .proj-button {
-    width: 150px !important;
+    width: 120px !important;
   }
 
 	.tech-icons {
